@@ -20,6 +20,7 @@ Bug Fixes:
 CAY-2683 Don't use DISTINCT for joins on to-one related tables
 CAY-2685 JsonType should use the actual JDBC type, not OTHER
 CAY-2686 SQL translator incorrectly quotes fully qualified tables' names
+CAY-2690 dbimport skips length changes for BINARY and VARBINARY columns
 
 ----------------------------------
 Release: 4.2.M2
